[package]
name = "tiktok-embedder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
tinytemplate = "1.2.1"
serde_json = "1.0.85"
youtube_dl = { version = "0.7.0", features = ["tokio"] }
